<resources>
    <string name="app_name">Proyecto_Electiva_Grupo5</string>
    <string name="txtNueva_np_titulo">Nueva nota de pedido</string>
    <string name="bntGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtListaPedidos">Lista de Pedidos</string>
    <string name="txtCodigo">Código</string>
    <string name="txtProducto">Producto</string>
    <string name="txtCantidad">Cantidad</string>
    <string name="txtAgregarProducto">Agregar Producto</string>
    <string name="Email">Email</string>
    <string name="Pass">Contraseña</string>
    <string name="btnIs">Iniciar sesión</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnForgotPass">Olvidé mi contraseña</string>
    <string name="logo"> Logo Etyecu</string>

    <!-- activity mis pedidos-->
    <string name="txtpedir">Mis pedidos</string>
    <string name="nombrebotonbusqueda">Buscar</string>
    <string name="hintbusqueda">Ingrese la busqueda</string>
    <string name="col1">Codigo</string>
    <string name="col2">fecha</string>
    <string name="col3">c/productos</string>
    <string name="col4">c/Lugar de origen</string>
    <string name="col5">c/estado</string>
    <string name="row1Cod">001</string>
    <string name="row1fecha">05/06/21</string>
    <string name="row1cproductos">20</string>
    <string name="row1lorigen">Mexico</string>
    <string name="row1estado">Entregado</string>
    <string name="row2Cod">002</string>
    <string name="row2fecha">06/06/21</string>
    <string name="row2cproductos">24</string>
    <string name="row2lorigen">Colombia</string>
    <string name="row2estado">Atentido</string>
    <string name="nombrebotondetalle">Ver Detalle De Pedido</string>

    <!-- Activity Pantalla Cliente -->
    <string name="usuario">(Nombre Cliente)</string>
    <string name="pclientecliente">Cliente</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="btncerrarsesion">Cerrar Sesion</string>
    <string name="labelingresarnotapedido">Ingresar nota de pedido</string>
    <string name="labellistadopedidos">Listado de pedidos</string>
    <string name="labelperfil">Perfil</string>
    <string name="labellistadofacturas">Listado de facturas</string>
    <string name="title_activity_ubicacion">Map</string>

    <!-- Activity Nuevo Producto -->
    <string name="txt_title_logo">IMG</string>
    <string name="txt_title_n_p">Nuevo Producto</string>
    <string name="txt_id">Codigo</string>
    <string name="txt_desc">Descripción</string>
    <string name="txt_lote">Lote</string>
    <string name="txt_modelo">Modelo</string>
    <string name="txt_marca">Marca</string>
    <string name="txt_comp">Composición</string>
    <string name="txt_tamanio">Tamaño</string>
    <string name="txt_cant">Cantidad</string>
    <string name="txt_pais">País</string>
    <string name="txt_obs">Observaciones</string>
    <string name="txt_add">Añadir</string>
    <string name="txt_cancel">Cancelar</string>

    <!-- Activity Mis Facturas -->
    <string name="mf_tittle">Mis Facturas</string>
    <string name="mf_busq">Búsqueda</string>
    <string name="mf_coltittle1">Codigo</string>
    <string name="mf_coltittle2">Fecha</string>
    <string name="mf_coltittle3">Productos</string>
    <string name="mf_coltittle4">Origen</string>
    <string name="mf_coltittle5">Precio</string>
    <string name="mf_precio1">$ 25.48</string>
    <string name="mf_precio2">$148.02</string>
    <string name="mf_up">Actualizar</string>

    <!-- Activity Empleado-Home -->
    <string name="eh_info">Empleado</string>
    <string name="eh_welcome">Bienvenido</string>
    <string name="eh_b1_etiquetado">Nuevo etiquetado</string>
    <string name="eh_b2_listado">Listado de clientes</string>
    <string name="eh_b3_perfil">Perfil empleado</string>
    <string name="eh_b4_procesos">Lista procesos</string>
    <string name="eh_b5_traza">Trazabilidad del etiquetado</string>

    <!-- Activity Nuevo-Etiquetado -->
    <string name="txt_titulo_nuevo_etiquetado">Nuevo Etiquetado</string>
    <string name="txt_label_id">ID</string>
    <string name="txt_label_cliente">Cliente</string>
    <string name="txt_label_identificacion">RUC</string>
    <string name="txt_label_fecha_inicio">Fecha de Inicio</string>
    <string name="txt_label_fecha_fin">Fecha Fin</string>
    <string name="txt_label_numero_nota_pedido">Número de nota de pedido</string>
    <string name="txt_label_numero_factura">Número Factura</string>
    <string name="button_ingreso_nota_pedido">Ingresar nota de pedido</string>
    <string name="button_guardar_etiquetado">Guardar</string>
    <string name="button_cancelar_etiquetado">Cancelar</string>

    <!-- Activity Nueva-Nota-Pedido -->
    <string name="txt_titulo_ingreso_nota_pedido">Ingresar nota de pedido</string>
    <string name="txt_pdf_prueba">Nota de pedido No3125.pdf</string>
    <string name="boton_anadir">Añadir</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>

    <!-- Activity Trazabilidad-Pedido -->
    <string name="txt_titulo_trazabilidad_pedido">Trazabilidad del proceso</string>
    <string name="label_nota_pedido_ingresada">Nota de pedido ingresada al sistema</string>
    <string name="label_carta_autorizacion_enviada">Carta de autorización enviada</string>
    <string name="label_carta_autorizacion_aprobada">Carta de autorización aprobada</string>
    <string name="label_inventario">Inventario</string>
    <string name="label_etiquetado">Etiquetado</string>
    <string name="label_pedido_cargado_transporte">Pedido cargado en el transporte</string>
    <string name="label_pedido_entregado">Pedido entregado</string>
    <string name="button_volver_trazabilidad">Volver</string>

    <!-- Activity Perfil-Cliente -->
    <string name="titulo_perfil_cliente">Perfil del cliente</string>
    <string name="label_id">ID</string>
    <string name="label_nombres">Nombres</string>
    <string name="label_apellidos">Apellidos</string>
    <string name="label_nombre_usuario">Nombre de Usuario</string>
    <string name="label_correo">Correo Electrónico</string>
    <string name="label_contrasenia">Contraseña</string>
    <string name="label_direccion">Dirección</string>
    <string name="boton_anadir_direccion">Añadir</string>
    <string name="boton_guardar_perfil">Guardar</string>
    <string name="boton_cancelar_perfil">Cancelar</string>

    <!-- Activity Direccion-Cliente -->
    <string name="titulo_direccion_cliente">Dirección</string>
    <string name="label_buscar_direccion">Ingresa tu dirección</string>
    <string name="placeholder_buscar_direccion">Dirección</string>
    <string name="boton_detectar_direccion">Detectar dirección automáticamente</string>
    <string name="boton_guardar_direccion_cliente">Guardar</string>
    <string name="boton_cancelar_direccion_cliente">Cancelar</string>

</resources>