<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DireccionesCliente">

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cancelar_direccion_cliente"
        app:backgroundTint="@color/gen_cancelar"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="612dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar_direccion_cliente"
        app:backgroundTint="@color/gen_aceptar"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="612dp" />

    <TextView
        android:id="@+id/txt_nuevo_etiquetado3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_title_logo"
        android:text="@string/titulo_direccion_cliente"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_buscar_direccion"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="136dp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_detectar_direccion"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="187dp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="163dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placeholder_buscar_direccion"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="127dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="298dp"
        android:layout_height="239dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="261dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="299dp"
        android:layout_height="240dp"
        app:srcCompat="@drawable/current_location_in_map"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="261dp" />

</androidx.constraintlayout.widget.ConstraintLayout>