<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilCliente">

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="188dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/txt_nuevo_etiquetado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_title_logo"
        android:text="@string/titulo_perfil_cliente"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nombre_usuario"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:text="@string/label_direccion"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="435dp" />

    <ImageView
        android:id="@+id/imagenEtiqueta"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/outline_photo_camera_front_black_24dp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="28dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar_perfil"
        app:backgroundTint="@color/gen_aceptar"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="626dp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_correo"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="375dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cancelar_perfil"
        app:backgroundTint="@color/gen_cancelar"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="626dp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nombres"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="132dp" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="375dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:text="@string/boton_anadir_direccion"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="435dp" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_apellidos"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/editTextDate4"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="316dp" />
</androidx.constraintlayout.widget.ConstraintLayout>