<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoEtiquetado">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_cliente"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="188dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_identificacion"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="262dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_fecha_inicio"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="316dp" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="127dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_fecha_fin"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="390dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:text="@string/txt_label_numero_nota_pedido"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="428dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="118dp"
        android:layout_height="25dp"
        android:text="@string/txt_label_numero_factura"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="506dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="153dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="494dp" />

    <ImageView
        android:id="@+id/imagenEtiqueta7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/iconopc2"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/txt_nuevo_etiquetado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_title_logo"
        android:text="@string/txt_titulo_nuevo_etiquetado"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="132dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="123dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="284dp"
        android:layout_height="41dp"
        android:text="@string/button_ingreso_nota_pedido"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="558dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelar_etiquetado"
        app:backgroundTint="@color/gen_cancelar"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="626dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_guardar_etiquetado"
        app:backgroundTint="@color/gen_aceptar"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="626dp" />

</androidx.constraintlayout.widget.ConstraintLayout>