<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarNotaPedidos">

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#3b5284"
        android:text="@string/boton_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#687980"
        android:text="@string/boton_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_eliminar"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_aceptar"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo_ingreso_nota_pedido"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_anadir"
        android:textColor="@color/black"
        app:backgroundTint="@color/gen_botones_complementarios"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pdf_prueba"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="371dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/iconopdf"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="332dp" />

</androidx.constraintlayout.widget.ConstraintLayout>